--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ export default async ({ page }) => {
 
 // Full puppeteer API is available
 await page.goto('https://google.com/');
-await page.type('input[type="text"]', 'browserless.io');
+await page.type('input[type="text"]', 'github.io');
 await Promise.all([
   page.click('input[type="submit"]'),
   page.waitForNavigation(),
